--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,12 @@
       "http://*/*",
       "https://*/*"
     ],
+    "icons": { 
+      "16": "src/assets/icons/icon32.png",
+      "32": "src/assets/icons/icon32.png",
+      "48": "src/assets/icons/icon32.png",
+      "128": "src/assets/icons/icon32.png"
+    },
     "description": "this is youtube-persian-content-blocker",
     "version": "0.0.1",
     "manifest_version": 3,
