feat: add style

--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,8 @@
       "activeTab",
       "scripting",
       "storage",
-      "declarativeContent"
+      "declarativeContent",
+      "nativeMessaging"
     ]
   }
   
